--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -7,3 +7,8 @@
 #two: 
 #  name: MyString
 #rand to computer  email: MyString
+
+#michael:
+#	name: Michael Example
+#	email: michael@example.com
+#	password_digest: <%= User.digest('password') %>
