test pass, till 8.5

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -12,3 +12,13 @@
 #	name: Michael Example
 #	email: michael@example.com
 #	password_digest: <%= User.digest('password') %>
+
+michael:
+  name: Michael Example
+  email: michael@example.com
+  password_digest: <%= User.digest('password') %>
+
+dmitry:
+  name: Dmitry Example
+  email: dmitry@example.com
+  password_digest: <%= User.digest('wordpass') %>
