--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -25,7 +25,7 @@ archer:
 lana:
   name: Lana Kaneemail
   email: hands@example.gov
-  password_digest: <%= User.digest('password') %>
+  password_digest: <%= User.digest('password3') %>
   activated: true
   activated_at: <%= Time.zone.now %>
 
