--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -25,8 +25,8 @@ archer:
 lana:
   name: Lana Kaneemail
   email: hands@example.gov
-  password_digest: <%= User.digest('password3') %>
-  activated: true
+  password_digest: <%= User.digest('password') %>
+  activated: false
   activated_at: <%= Time.zone.now %>
 
 malory:
